[tool.poetry]
name = "healthreceiver"
version = "0.1.0"
description = ""
authors = ["Tom Eichhorn <tom@wirkbetrieb.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
geolib = "^1.0.7"
requests = "^2.28.2"
six = "^1.16.0"
pytz = "^2022.7.1"
dateutils = "^0.6.12"
python-json-logger = "^2.0.7"
influxdb = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
