[tool.poetry]
name = "healthreceiver"
version = "0.1.0"
description = ""
authors = ["Tom Eichhorn <tom@wirkbetrieb.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
geolib = "^1.0.7"
requests = "^2.31.0"
six = "^1.16.0"
pytz = "^2024.1"
dateutils = "^0.6.12"
python-json-logger = "^2.0.7"
influxdb = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
